# cloudstorageapi

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
cmake/: CsaCommon.cmake  FindCurlWithTargets.cmake  FindGMockWithTargets.cmake  IncludeNlohmannJson.cmake
examples/: CMakeLists.txt  csa_example.cpp  csa_example_helper.cpp  csa_example_helper.h
include/cloudstorageapi/: auto_finalize.h  client_options.h  cloud_storage_client.h  common_metadata.h  download_options.h  file_metadata.h  file_read_stream.h  file_stream.h  file_write_stream.h  folder_metadata.h  list_folder_reader.h  options.h  providers.h  retry_policy.h  status.h  status_or_val.h  storage_quota.h  terminate_handler.h  upload_options.h  user_info.h  version_info.h  version_info.h.in  well_known_headers.h  well_known_parameters.h
include/cloudstorageapi/auth/: anonymous_credentials.h  credential_constants.h  credential_factory.h  credentials.h  default_credentials_file.h  error_credentials.h  google_oauth2_credentials.h  oauth2_credentials.h  refreshing_credentials_wrapper.h
include/cloudstorageapi/internal/: algorithm.h  backoff_policy_internal.h  complex_option.h  const_buffer.h  curl_client_base.h  curl_download_request.h  curl_handle.h  curl_handle_factory.h  curl_request.h  curl_request_builder.h  curl_resumable_upload_session.h  curl_wrappers.h  diagnostics_pop.inc  diagnostics_push.inc  disable_deprecation_warnings.inc  disable_msvc_crt_secure_warnings.inc  empty_response.h  file_read_streambuf.h  file_requests.h  file_streambuf.h  file_write_streambuf.h  folder_requests.h  generic_object_request.h  generic_object_requests.h  generic_request.h  http_empty_response.h  http_response.h  ios_flags_saver.h  json_utils.h  log.h  log_spdlog_fmt_support_user_defined_types.h  logging_client.h  logging_resumable_upload_session.h  nljson.h  nlohmann_json.hpp  object_read_source.h  pagination_range.h  random.h  raw_client.h  raw_client_wrapper_utils.h  (+10 more)
include/cloudstorageapi/internal/clients/: curl_client_factory.h  curl_googledrive_client.h  google_metadata_parser.h  google_response_parser.h  google_utils.h
quickstart/: CMakeLists.txt  quickstart.cpp
src/: CMakeLists.txt  algorithm.cpp  auto_finalize.cpp  backoff_policy_internal.cpp  client_options.cpp  cloud_storage_client.cpp  common_metadata.cpp  const_buffer.cpp  file_metadata.cpp  file_read_stream.cpp  file_read_streambuf.cpp  file_stream.cpp  file_streambuf.cpp  file_write_stream.cpp  file_write_streambuf.cpp  folder_metadata.cpp  json_utils.cpp  list_folder_reader.cpp  log.cpp  options.cpp  random.cpp  retry_object_read_source.cpp  rfc3339_time.cpp  rfc3339_timestamp_parser.cpp  status.cpp  terminate_handler.cpp  utils.cpp  well_known_headers.cpp
src/auth/: credential_factory.cpp  default_credentials_file.cpp  error_credentials.cpp  google_oauth2_credentials.cpp  refreshing_credentials_wrapper.cpp
src/transport/: curl_client_base.cpp  curl_download_request.cpp  curl_handle.cpp  curl_handle_factory.cpp  curl_request.cpp  curl_request_builder.cpp  curl_resumable_upload_session.cpp  curl_wrappers.cpp  empty_response.cpp  file_requests.cpp  folder_requests.cpp  generic_object_requests.cpp  http_empty_response.cpp  http_response.cpp  logging_client.cpp  logging_resumable_upload_session.cpp  resumable_upload_session.cpp  retry_client.cpp  retry_resumable_upload_session.cpp
src/transport/clients/: curl_googledrive_client.cpp  google_metadata_parser.cpp  google_utils.cpp
testing_util/: CMakeLists.txt  assert_ok.cpp  assert_ok.h  check_predicate_becomes_false.h  mock_cloud_storage_client.h  mock_fake_clock.cpp  mock_http_request.cpp  mock_resumable_upload_session.h  null_credentials.h  scoped_environment.cpp  scoped_log.cpp  status_matchers.cpp  status_matchers.h  testing_types.cpp  testing_types.h
tests/: CMakeLists.txt  algorithm_test.cpp  anonymous_credentials_test.cpp  assert_ok_test.cpp  auto_finalize_test.cpp  backoff_policy_internal_tests.cpp  canonical_errors.h  complex_option_test.cpp  const_buffer_equality_test.cpp  const_buffer_test.cpp  contains_once_test.cpp  curl_googledrive_client_test.cpp  curl_handle_factory_test.cpp  curl_handle_test.cpp  curl_resumable_upload_session_test.cpp  curl_wrappers_disable_sigpipe_handler_test.cpp  curl_wrappers_enable_sigpipe_handler_test.cpp  curl_wrappers_locking_already_present_test.cpp  curl_wrappers_locking_disabled_test.cpp  curl_wrappers_locking_enabled_test.cpp  curl_wrappers_test.cpp  default_credentials_file_test.cpp  file_metadata_test.cpp  file_read_streambuf_test.cpp  file_requests_tests.cpp  file_stream_test.cpp  file_write_streambuf_test.cpp  folder_metadata_test.cpp  folder_requests_tests.cpp  generic_request_test.cpp  google_metadata_parser_test.cpp  google_oauth2_credentials_test.cpp  google_response_parser_test.cpp  google_utils_test.cpp  http_response_test.cpp  json_utils_test.cpp  list_folder_reader_test.cpp  log_test.cpp  logging_client_test.cpp  logging_resumable_upload_session_test.cpp  (+28 more)
tests/util/: assert_ok.cpp  assert_ok.h  chrono_literals.h  const_buffer_equality.h  contains_once.h  expect_exception.h  null_credentials.h  scoped_environment.cpp  scoped_environment.h  scoped_log.cpp  scoped_log.h  status_matchers.cpp  testing_types.cpp  testing_types.h
